--- a/css/mystylesheet.css
+++ b/css/mystylesheet.css
@@ -10,6 +10,7 @@
 
 html,body{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 /* NAV SECTION */
@@ -117,8 +118,11 @@ a{
 
 #servi_one{
     padding: 10px 60px;
-    margin-left: 25px;
     margin-top: 5rem;
+}
+
+#servi_one h1{
+    margin-left: 25px;
 }
 
 #servi_one h1{
@@ -207,4 +211,149 @@ a{
     margin-top: 20px;
     color: white;
     font-size: 11px;
+}
+
+.menuIcon{
+    display: none;
+}
+
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: rgb(3, 20, 250); /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 100px; /* Rounded corners */
+    font-size: 20px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+  }
+
+@media screen and (max-width:992px) {
+    #next h1{
+        font-size: 35px;
+    }
+
+    #next, #servi_one{
+        padding: 10px 30px;
+    }
+
+    #next img{
+        width: 40%;
+    }
+
+    #about{
+        padding: 60px 30px;
+    }
+
+    #foot{
+        padding: 40px 30px;
+    }
+
+    .footnav{
+        gap: 120px;
+    }
+}
+
+
+@media screen and (max-width:768px) {
+    #navbar{
+        padding: 10px 30px;
+    }
+
+    #next h1{
+        font-size: 26px;
+    }
+
+    .aboutword{
+        width: 60%;
+    }
+
+    .aboutword h1{
+        font-size: 30px;
+    }
+
+   .aboutBoxes, .serviBoxes{
+    grid-template-columns: repeat(2, 1fr);
+   }
+
+   .serviBoxes img{
+    object-fit: cover;
+   }
+
+   #navbar .request_invite{
+    display: none;
+   }
+
+   .navlink{
+       background-color: hsl(233, 26%, 24%);
+       flex-direction: column;
+       text-align: center;
+       position: absolute;
+       top: -35%;
+       left: 50%;
+       transform: translate(-50%, -50%);
+       width: 60%;
+       padding: 20px;
+       transition: .5s;
+       z-index: 999;
+   }
+
+   .menuIcon{
+    display: block;
+    }
+
+    .menuIcon i{
+        color: #fff;
+        font-size: 25px;
+    }
+
+    .ri-close-fill{
+        display: none;
+    }
+}
+
+@media screen and (max-width:576px) {
+    #next{
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+
+    #next div{
+        width: 70%;
+        margin-top: 20px;
+    }
+
+    #next img{
+        width: 60%;
+    }
+
+    .aboutword{
+        text-align: center;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .aboutBoxes{
+        text-align: center;
+    }
+
+    .aboutBoxes, .serviBoxes{
+        grid-template-columns: 1fr;
+       }
+
+       #servi_one{
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+       }
 }
